--- a/index.html
+++ b/index.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <div class="logo">
+        <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
+    </div>
+    <div class="search">
+        <form>
+            <input type="text" id="search" name="search">
+        </form>
+    </div>
 </body>
 </html>
