--- a/index.html
+++ b/index.html
@@ -3,16 +3,33 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Google</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <a href="#">About</a>
+        <a href="#">Store</a>
+        <a href="#">Gmail</a>
+        <a href="#">Images</a>
+    </header>
     <div class="logo">
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
     </div>
     <div class="search">
         <form>
-            <input type="text" id="search" name="search">
+            <input type="text" id="search" name="search"><br><br>
+            <input type="submit" value="Google Search">
+            <input type="submit" value="I'm feeling lucky">
         </form>
     </div>
+    <footer>
+        <a href="#">Advertising</a>
+        <a href="#">Business</a>
+        <a href="#">How Search Works</a>
+        <a href="#">Privacy</a>
+        <a href="#">Terms</a>
+        <a href="#">Settings</a>
+    </footer>
 </body>
 </html>
