--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <ul>
             <li><a href="#">About</a></li>
             <li><a href="#">Store</a></li>
-            <li><a href="#">Gmail</a></li>
-            <li><a href="#">Images</a></li>
+            <li style="float:right"><a href="#">Gmail</a></li>
+            <li style="float:right"><a href="#">Images</a></li>
         </ul>
     </header>
     <div class="logo">
@@ -20,9 +20,13 @@
     </div>
     <div class="search">
         <form>
-            <input type="text" id="search" name="search"><br><br>
-            <input type="submit" value="Google Search">
-            <input type="submit" value="I'm feeling lucky">
+            <input type="text" id="search" name="search">
+        </form>
+    </div>
+    <div class="buttons">
+        <form>
+            <input type="submit" class="button" value="Google Search">
+            <input type="submit" class="button" value="I'm feeling lucky">
         </form>
     </div>
     <footer>
@@ -30,9 +34,9 @@
             <li><a href="#">Advertising</a></li>
             <li><a href="#">Business</a></li>
             <li><a href="#">How Search Works</a></li>
-            <li><a href="#">Privacy</a></li>
-            <li><a href="#">Terms</a></li>
-            <li><a href="#">Settings</a></li>
+            <li style="float:right"><a href="#">Privacy</a></li>
+            <li style="float:right"><a href="#">Terms</a></li>
+            <li style="float:right"><a href="#">Settings</a></li>
         </ul>
     </footer>
 </body>
