Lower logo, style buttons

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <input type="text" id="search" name="search">
         </form>
     </div>
-    <div class="buttons">
+    <div>
         <form>
             <input type="submit" class="button" value="Google Search">
             <input type="submit" class="button" value="I'm feeling lucky">
