Create rounded rectangle containing text input

--- a/index.html
+++ b/index.html
@@ -19,11 +19,13 @@
         <img src="https://www.google.com/images/branding/googlelogo/1x/googlelogo_color_272x92dp.png" />
     </div>
     <div class="search">
-        <form>
-            <input type="text" id="search" name="search">
-        </form>
+        <div class="searchbox">
+            <form>
+                <input type="text" id="search" name="search">
+            </form>
+        </div>
     </div>
-    <div>
+    <div class="buttons">
         <form>
             <input type="submit" class="button" value="Google Search">
             <input type="submit" class="button" value="I'm feeling lucky">
